syntax = "proto3";
import "telemetry/messages/scenario_condition.proto";
import "telemetry/messages/device_action.proto";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message ScenarioAddedEventProto {
  string name = 1;
  repeated ScenarioConditionProto condition = 2;
  repeated DeviceActionProto action = 3;
}