syntax = "proto3";
import "telemetry/messages/motion_sensor_event.proto";
import "telemetry/messages/temperature_sensor_event.proto";
import "telemetry/messages/light_sensor_event.proto";
import "telemetry/messages/climate_sensor_event.proto";
import "telemetry/messages/switch_sensor_event.proto";
import "google/protobuf/timestamp.proto";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message SensorEventProto {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string hubId = 3;
  oneof payload {
    MotionSensorEvent motion_sensor_event = 4;
    TemperatureSensorEvent temperature_sensor_event = 5;
    LightSensorEvent light_sensor_event = 6;
    ClimateSensorEvent climate_sensor_event = 7;
    SwitchSensorEvent switch_sensor_event = 8;
  }
}